assignments/PA3/cool.output
Terminals unused in grammar

    ERROR


Rules useless in parser due to conflicts

   57 let_expr: LET OBJECTID ':' TYPEID ',' nested_let


State 12 conflicts: 1 shift/reduce
State 19 conflicts: 1 shift/reduce
State 30 conflicts: 1 shift/reduce
State 90 conflicts: 1 shift/reduce
State 141 conflicts: 9 shift/reduce
State 143 conflicts: 20 reduce/reduce
State 156 conflicts: 9 shift/reduce
State 159 conflicts: 9 shift/reduce
State 166 conflicts: 9 shift/reduce


Grammar

    0 $accept: program $end

    1 program: class_list

    2 class_list: class ';'
    3           | class_list class ';'
    4           | error ';'

    5 class: CLASS TYPEID '{' feature_list '}'
    6      | CLASS TYPEID INHERITS TYPEID '{' feature_list '}'

    7 feature_list: feature ';'
    8             | feature_list feature ';'
    9             | error ';'
   10             | %empty

   11 feature: OBJECTID ':' TYPEID
   12        | OBJECTID ':' TYPEID ASSIGN expr
   13        | OBJECTID '(' formal_list ')' ':' TYPEID '{' expr '}'

   14 formal_list: formal formal_list_tail
   15            | %empty

   16 formal_list_tail: ',' formal
   17                 | formal_list_tail ',' formal
   18                 | %empty

   19 formal: OBJECTID ':' TYPEID

   20 expr: OBJECTID ASSIGN expr
   21     | expr '@' TYPEID '.' OBJECTID '(' expr_list ')'
   22     | expr '.' OBJECTID '(' expr_list ')'
   23     | OBJECTID '(' expr_list ')'
   24     | IF expr THEN expr ELSE expr FI
   25     | WHILE expr LOOP expr POOL
   26     | '{' exprs '}'
   27     | let_expr
   28     | CASE expr OF case_body_list ESAC
   29     | NEW TYPEID
   30     | ISVOID expr
   31     | expr '+' expr
   32     | expr '-' expr
   33     | expr '*' expr
   34     | expr '/' expr
   35     | '~' expr
   36     | expr '<' expr
   37     | expr LE expr
   38     | expr '=' expr
   39     | NOT expr
   40     | '(' expr ')'
   41     | OBJECTID
   42     | INT_CONST
   43     | STR_CONST
   44     | BOOL_CONST

   45 expr_list: expr expr_list_tail
   46          | %empty

   47 expr_list_tail: ',' expr
   48               | expr_list_tail ',' expr
   49               | %empty

   50 exprs: expr ';'
   51      | exprs expr ';'
   52      | error ';'

   53 let_expr: LET OBJECTID ':' TYPEID ASSIGN expr IN expr
   54         | LET OBJECTID ':' TYPEID IN expr
   55         | LET OBJECTID ':' TYPEID ASSIGN expr ',' nested_let
   56         | LET OBJECTID ':' TYPEID ',' nested_let
   57         | LET OBJECTID ':' TYPEID ',' nested_let
   58         | LET error ',' nested_let

   59 nested_let: OBJECTID ':' TYPEID ASSIGN expr ',' nested_let
   60           | OBJECTID ':' TYPEID ASSIGN expr IN expr
   61           | OBJECTID ':' TYPEID ',' nested_let
   62           | OBJECTID ':' TYPEID IN expr
   63           | error ',' nested_let

   64 case_body_list: case_body_list case_body
   65               | case_body

   66 case_body: OBJECTID ':' TYPEID DARROW expr ';'


Terminals, with rules where they appear

    $end (0) 0
    '(' (40) 13 21 22 23 40
    ')' (41) 13 21 22 23 40
    '*' (42) 33
    '+' (43) 31
    ',' (44) 16 17 47 48 55 56 57 58 59 61 63
    '-' (45) 32
    '.' (46) 21 22
    '/' (47) 34
    ':' (58) 11 12 13 19 53 54 55 56 57 59 60 61 62 66
    ';' (59) 2 3 4 7 8 9 50 51 52 66
    '<' (60) 36
    '=' (61) 38
    '@' (64) 21
    '{' (123) 5 6 13 26
    '}' (125) 5 6 13 26
    '~' (126) 35
    error (256) 4 9 52 58 63
    CLASS (258) 5 6
    ELSE (259) 24
    FI (260) 24
    IF (261) 24
    IN (262) 53 54 60 62
    INHERITS (263) 6
    LET (264) 53 54 55 56 57 58
    LOOP (265) 25
    POOL (266) 25
    THEN (267) 24
    WHILE (268) 25
    CASE (269) 28
    ESAC (270) 28
    OF (271) 28
    DARROW (272) 66
    NEW (273) 29
    ISVOID (274) 30
    STR_CONST <symbol> (275) 43
    INT_CONST <symbol> (276) 42
    BOOL_CONST <boolean> (277) 44
    TYPEID <symbol> (278) 5 6 11 12 13 19 21 29 53 54 55 56 57 59 60 61 62 66
    OBJECTID <symbol> (279) 11 12 13 19 20 21 22 23 41 53 54 55 56 57 59 60 61 62 66
    ASSIGN (280) 12 20 53 55 59 60
    NOT (281) 39
    LE (282) 37
    ERROR (283)


Nonterminals, with rules where they appear

    $accept (45)
        on left: 0
    program <program> (46)
        on left: 1
        on right: 0
    class_list <classes> (47)
        on left: 2 3 4
        on right: 1 3
    class <class_> (48)
        on left: 5 6
        on right: 2 3
    feature_list <features> (49)
        on left: 7 8 9 10
        on right: 5 6 8
    feature <feature> (50)
        on left: 11 12 13
        on right: 7 8
    formal_list <formals> (51)
        on left: 14 15
        on right: 13
    formal_list_tail <formals> (52)
        on left: 16 17 18
        on right: 14 17
    formal <formal> (53)
        on left: 19
        on right: 14 16 17
    expr <expression> (54)
        on left: 20 21 22 23 24 25 26 27 28 29 30 31 32 33 34 35 36 37 38 39 40 41 42 43 44
        on right: 12 13 20 21 22 24 25 28 30 31 32 33 34 35 36 37 38 39 40 45 47 48 50 51 53 54 55 59 60 62 66
    expr_list <expressions> (55)
        on left: 45 46
        on right: 21 22 23
    expr_list_tail <expressions> (56)
        on left: 47 48 49
        on right: 45 48
    exprs <expressions> (57)
        on left: 50 51 52
        on right: 26 51
    let_expr <expression> (58)
        on left: 53 54 55 56 57 58
        on right: 27
    nested_let <expression> (59)
        on left: 59 60 61 62 63
        on right: 55 56 57 58 59 61 63
    case_body_list <cases> (60)
        on left: 64 65
        on right: 28 64
    case_body <case_> (61)
        on left: 66
        on right: 64 65


State 0

    0 $accept: . program $end

    error  shift, and go to state 1
    CLASS  shift, and go to state 2

    program     go to state 3
    class_list  go to state 4
    class       go to state 5


State 1

    4 class_list: error . ';'

    ';'  shift, and go to state 6


State 2

    5 class: CLASS . TYPEID '{' feature_list '}'
    6      | CLASS . TYPEID INHERITS TYPEID '{' feature_list '}'

    TYPEID  shift, and go to state 7


State 3

    0 $accept: program . $end

    $end  shift, and go to state 8


State 4

    1 program: class_list .
    3 class_list: class_list . class ';'

    CLASS  shift, and go to state 2

    $default  reduce using rule 1 (program)

    class  go to state 9


State 5

    2 class_list: class . ';'

    ';'  shift, and go to state 10


State 6

    4 class_list: error ';' .

    $default  reduce using rule 4 (class_list)


State 7

    5 class: CLASS TYPEID . '{' feature_list '}'
    6      | CLASS TYPEID . INHERITS TYPEID '{' feature_list '}'

    INHERITS  shift, and go to state 11
    '{'       shift, and go to state 12


State 8

    0 $accept: program $end .

    $default  accept


State 9

    3 class_list: class_list class . ';'

    ';'  shift, and go to state 13


State 10

    2 class_list: class ';' .

    $default  reduce using rule 2 (class_list)


State 11

    6 class: CLASS TYPEID INHERITS . TYPEID '{' feature_list '}'

    TYPEID  shift, and go to state 14


State 12

    5 class: CLASS TYPEID '{' . feature_list '}'

    error     shift, and go to state 15
    OBJECTID  shift, and go to state 16

    OBJECTID  [reduce using rule 10 (feature_list)]
    '}'       reduce using rule 10 (feature_list)

    feature_list  go to state 17
    feature       go to state 18


State 13

    3 class_list: class_list class ';' .

    $default  reduce using rule 3 (class_list)


State 14

    6 class: CLASS TYPEID INHERITS TYPEID . '{' feature_list '}'

    '{'  shift, and go to state 19


State 15

    9 feature_list: error . ';'

    ';'  shift, and go to state 20


State 16

   11 feature: OBJECTID . ':' TYPEID
   12        | OBJECTID . ':' TYPEID ASSIGN expr
   13        | OBJECTID . '(' formal_list ')' ':' TYPEID '{' expr '}'

    ':'  shift, and go to state 21
    '('  shift, and go to state 22


State 17

    5 class: CLASS TYPEID '{' feature_list . '}'
    8 feature_list: feature_list . feature ';'

    OBJECTID  shift, and go to state 16
    '}'       shift, and go to state 23

    feature  go to state 24


State 18

    7 feature_list: feature . ';'

    ';'  shift, and go to state 25


State 19

    6 class: CLASS TYPEID INHERITS TYPEID '{' . feature_list '}'

    error     shift, and go to state 15
    OBJECTID  shift, and go to state 16

    OBJECTID  [reduce using rule 10 (feature_list)]
    '}'       reduce using rule 10 (feature_list)

    feature_list  go to state 26
    feature       go to state 18


State 20

    9 feature_list: error ';' .

    $default  reduce using rule 9 (feature_list)


State 21

   11 feature: OBJECTID ':' . TYPEID
   12        | OBJECTID ':' . TYPEID ASSIGN expr

    TYPEID  shift, and go to state 27


State 22

   13 feature: OBJECTID '(' . formal_list ')' ':' TYPEID '{' expr '}'

    OBJECTID  shift, and go to state 28

    $default  reduce using rule 15 (formal_list)

    formal_list  go to state 29
    formal       go to state 30


State 23

    5 class: CLASS TYPEID '{' feature_list '}' .

    $default  reduce using rule 5 (class)


State 24

    8 feature_list: feature_list feature . ';'

    ';'  shift, and go to state 31


State 25

    7 feature_list: feature ';' .

    $default  reduce using rule 7 (feature_list)


State 26

    6 class: CLASS TYPEID INHERITS TYPEID '{' feature_list . '}'
    8 feature_list: feature_list . feature ';'

    OBJECTID  shift, and go to state 16
    '}'       shift, and go to state 32

    feature  go to state 24


State 27

   11 feature: OBJECTID ':' TYPEID .
   12        | OBJECTID ':' TYPEID . ASSIGN expr

    ASSIGN  shift, and go to state 33

    $default  reduce using rule 11 (feature)


State 28

   19 formal: OBJECTID . ':' TYPEID

    ':'  shift, and go to state 34


State 29

   13 feature: OBJECTID '(' formal_list . ')' ':' TYPEID '{' expr '}'

    ')'  shift, and go to state 35


State 30

   14 formal_list: formal . formal_list_tail

    ','  shift, and go to state 36

    ','       [reduce using rule 18 (formal_list_tail)]
    $default  reduce using rule 18 (formal_list_tail)

    formal_list_tail  go to state 37


State 31

    8 feature_list: feature_list feature ';' .

    $default  reduce using rule 8 (feature_list)


State 32

    6 class: CLASS TYPEID INHERITS TYPEID '{' feature_list '}' .

    $default  reduce using rule 6 (class)


State 33

   12 feature: OBJECTID ':' TYPEID ASSIGN . expr

    IF          shift, and go to state 38
    LET         shift, and go to state 39
    WHILE       shift, and go to state 40
    CASE        shift, and go to state 41
    NEW         shift, and go to state 42
    ISVOID      shift, and go to state 43
    STR_CONST   shift, and go to state 44
    INT_CONST   shift, and go to state 45
    BOOL_CONST  shift, and go to state 46
    OBJECTID    shift, and go to state 47
    NOT         shift, and go to state 48
    '~'         shift, and go to state 49
    '{'         shift, and go to state 50
    '('         shift, and go to state 51

    expr      go to state 52
    let_expr  go to state 53


State 34

   19 formal: OBJECTID ':' . TYPEID

    TYPEID  shift, and go to state 54


State 35

   13 feature: OBJECTID '(' formal_list ')' . ':' TYPEID '{' expr '}'

    ':'  shift, and go to state 55


State 36

   16 formal_list_tail: ',' . formal

    OBJECTID  shift, and go to state 28

    formal  go to state 56


State 37

   14 formal_list: formal formal_list_tail .
   17 formal_list_tail: formal_list_tail . ',' formal

    ','  shift, and go to state 57

    $default  reduce using rule 14 (formal_list)


State 38

   24 expr: IF . expr THEN expr ELSE expr FI

    IF          shift, and go to state 38
    LET         shift, and go to state 39
    WHILE       shift, and go to state 40
    CASE        shift, and go to state 41
    NEW         shift, and go to state 42
    ISVOID      shift, and go to state 43
    STR_CONST   shift, and go to state 44
    INT_CONST   shift, and go to state 45
    BOOL_CONST  shift, and go to state 46
    OBJECTID    shift, and go to state 47
    NOT         shift, and go to state 48
    '~'         shift, and go to state 49
    '{'         shift, and go to state 50
    '('         shift, and go to state 51

    expr      go to state 58
    let_expr  go to state 53


State 39

   53 let_expr: LET . OBJECTID ':' TYPEID ASSIGN expr IN expr
   54         | LET . OBJECTID ':' TYPEID IN expr
   55         | LET . OBJECTID ':' TYPEID ASSIGN expr ',' nested_let
   56         | LET . OBJECTID ':' TYPEID ',' nested_let
   57         | LET . OBJECTID ':' TYPEID ',' nested_let
   58         | LET . error ',' nested_let

    error     shift, and go to state 59
    OBJECTID  shift, and go to state 60


State 40

   25 expr: WHILE . expr LOOP expr POOL

    IF          shift, and go to state 38
    LET         shift, and go to state 39
    WHILE       shift, and go to state 40
    CASE        shift, and go to state 41
    NEW         shift, and go to state 42
    ISVOID      shift, and go to state 43
    STR_CONST   shift, and go to state 44
    INT_CONST   shift, and go to state 45
    BOOL_CONST  shift, and go to state 46
    OBJECTID    shift, and go to state 47
    NOT         shift, and go to state 48
    '~'         shift, and go to state 49
    '{'         shift, and go to state 50
    '('         shift, and go to state 51

    expr      go to state 61
    let_expr  go to state 53


State 41

   28 expr: CASE . expr OF case_body_list ESAC

    IF          shift, and go to state 38
    LET         shift, and go to state 39
    WHILE       shift, and go to state 40
    CASE        shift, and go to state 41
    NEW         shift, and go to state 42
    ISVOID      shift, and go to state 43
    STR_CONST   shift, and go to state 44
    INT_CONST   shift, and go to state 45
    BOOL_CONST  shift, and go to state 46
    OBJECTID    shift, and go to state 47
    NOT         shift, and go to state 48
    '~'         shift, and go to state 49
    '{'         shift, and go to state 50
    '('         shift, and go to state 51

    expr      go to state 62
    let_expr  go to state 53


State 42

   29 expr: NEW . TYPEID

    TYPEID  shift, and go to state 63


State 43

   30 expr: ISVOID . expr

    IF          shift, and go to state 38
    LET         shift, and go to state 39
    WHILE       shift, and go to state 40
    CASE        shift, and go to state 41
    NEW         shift, and go to state 42
    ISVOID      shift, and go to state 43
    STR_CONST   shift, and go to state 44
    INT_CONST   shift, and go to state 45
    BOOL_CONST  shift, and go to state 46
    OBJECTID    shift, and go to state 47
    NOT         shift, and go to state 48
    '~'         shift, and go to state 49
    '{'         shift, and go to state 50
    '('         shift, and go to state 51

    expr      go to state 64
    let_expr  go to state 53


State 44

   43 expr: STR_CONST .

    $default  reduce using rule 43 (expr)


State 45

   42 expr: INT_CONST .

    $default  reduce using rule 42 (expr)


State 46

   44 expr: BOOL_CONST .

    $default  reduce using rule 44 (expr)


State 47

   20 expr: OBJECTID . ASSIGN expr
   23     | OBJECTID . '(' expr_list ')'
   41     | OBJECTID .

    ASSIGN  shift, and go to state 65
    '('     shift, and go to state 66

    $default  reduce using rule 41 (expr)


State 48

   39 expr: NOT . expr

    IF          shift, and go to state 38
    LET         shift, and go to state 39
    WHILE       shift, and go to state 40
    CASE        shift, and go to state 41
    NEW         shift, and go to state 42
    ISVOID      shift, and go to state 43
    STR_CONST   shift, and go to state 44
    INT_CONST   shift, and go to state 45
    BOOL_CONST  shift, and go to state 46
    OBJECTID    shift, and go to state 47
    NOT         shift, and go to state 48
    '~'         shift, and go to state 49
    '{'         shift, and go to state 50
    '('         shift, and go to state 51

    expr      go to state 67
    let_expr  go to state 53


State 49

   35 expr: '~' . expr

    IF          shift, and go to state 38
    LET         shift, and go to state 39
    WHILE       shift, and go to state 40
    CASE        shift, and go to state 41
    NEW         shift, and go to state 42
    ISVOID      shift, and go to state 43
    STR_CONST   shift, and go to state 44
    INT_CONST   shift, and go to state 45
    BOOL_CONST  shift, and go to state 46
    OBJECTID    shift, and go to state 47
    NOT         shift, and go to state 48
    '~'         shift, and go to state 49
    '{'         shift, and go to state 50
    '('         shift, and go to state 51

    expr      go to state 68
    let_expr  go to state 53


State 50

   26 expr: '{' . exprs '}'

    error       shift, and go to state 69
    IF          shift, and go to state 38
    LET         shift, and go to state 39
    WHILE       shift, and go to state 40
    CASE        shift, and go to state 41
    NEW         shift, and go to state 42
    ISVOID      shift, and go to state 43
    STR_CONST   shift, and go to state 44
    INT_CONST   shift, and go to state 45
    BOOL_CONST  shift, and go to state 46
    OBJECTID    shift, and go to state 47
    NOT         shift, and go to state 48
    '~'         shift, and go to state 49
    '{'         shift, and go to state 50
    '('         shift, and go to state 51

    expr      go to state 70
    exprs     go to state 71
    let_expr  go to state 53


State 51

   40 expr: '(' . expr ')'

    IF          shift, and go to state 38
    LET         shift, and go to state 39
    WHILE       shift, and go to state 40
    CASE        shift, and go to state 41
    NEW         shift, and go to state 42
    ISVOID      shift, and go to state 43
    STR_CONST   shift, and go to state 44
    INT_CONST   shift, and go to state 45
    BOOL_CONST  shift, and go to state 46
    OBJECTID    shift, and go to state 47
    NOT         shift, and go to state 48
    '~'         shift, and go to state 49
    '{'         shift, and go to state 50
    '('         shift, and go to state 51

    expr      go to state 72
    let_expr  go to state 53


State 52

   12 feature: OBJECTID ':' TYPEID ASSIGN expr .
   21 expr: expr . '@' TYPEID '.' OBJECTID '(' expr_list ')'
   22     | expr . '.' OBJECTID '(' expr_list ')'
   31     | expr . '+' expr
   32     | expr . '-' expr
   33     | expr . '*' expr
   34     | expr . '/' expr
   36     | expr . '<' expr
   37     | expr . LE expr
   38     | expr . '=' expr

    LE   shift, and go to state 73
    '<'  shift, and go to state 74
    '='  shift, and go to state 75
    '+'  shift, and go to state 76
    '-'  shift, and go to state 77
    '*'  shift, and go to state 78
    '/'  shift, and go to state 79
    '@'  shift, and go to state 80
    '.'  shift, and go to state 81

    $default  reduce using rule 12 (feature)


State 53

   27 expr: let_expr .

    $default  reduce using rule 27 (expr)


State 54

   19 formal: OBJECTID ':' TYPEID .

    $default  reduce using rule 19 (formal)


State 55

   13 feature: OBJECTID '(' formal_list ')' ':' . TYPEID '{' expr '}'

    TYPEID  shift, and go to state 82


State 56

   16 formal_list_tail: ',' formal .

    $default  reduce using rule 16 (formal_list_tail)


State 57

   17 formal_list_tail: formal_list_tail ',' . formal

    OBJECTID  shift, and go to state 28

    formal  go to state 83


State 58

   21 expr: expr . '@' TYPEID '.' OBJECTID '(' expr_list ')'
   22     | expr . '.' OBJECTID '(' expr_list ')'
   24     | IF expr . THEN expr ELSE expr FI
   31     | expr . '+' expr
   32     | expr . '-' expr
   33     | expr . '*' expr
   34     | expr . '/' expr
   36     | expr . '<' expr
   37     | expr . LE expr
   38     | expr . '=' expr

    THEN  shift, and go to state 84
    LE    shift, and go to state 73
    '<'   shift, and go to state 74
    '='   shift, and go to state 75
    '+'   shift, and go to state 76
    '-'   shift, and go to state 77
    '*'   shift, and go to state 78
    '/'   shift, and go to state 79
    '@'   shift, and go to state 80
    '.'   shift, and go to state 81


State 59

   58 let_expr: LET error . ',' nested_let

    ','  shift, and go to state 85


State 60

   53 let_expr: LET OBJECTID . ':' TYPEID ASSIGN expr IN expr
   54         | LET OBJECTID . ':' TYPEID IN expr
   55         | LET OBJECTID . ':' TYPEID ASSIGN expr ',' nested_let
   56         | LET OBJECTID . ':' TYPEID ',' nested_let
   57         | LET OBJECTID . ':' TYPEID ',' nested_let

    ':'  shift, and go to state 86


State 61

   21 expr: expr . '@' TYPEID '.' OBJECTID '(' expr_list ')'
   22     | expr . '.' OBJECTID '(' expr_list ')'
   25     | WHILE expr . LOOP expr POOL
   31     | expr . '+' expr
   32     | expr . '-' expr
   33     | expr . '*' expr
   34     | expr . '/' expr
   36     | expr . '<' expr
   37     | expr . LE expr
   38     | expr . '=' expr

    LOOP  shift, and go to state 87
    LE    shift, and go to state 73
    '<'   shift, and go to state 74
    '='   shift, and go to state 75
    '+'   shift, and go to state 76
    '-'   shift, and go to state 77
    '*'   shift, and go to state 78
    '/'   shift, and go to state 79
    '@'   shift, and go to state 80
    '.'   shift, and go to state 81


State 62

   21 expr: expr . '@' TYPEID '.' OBJECTID '(' expr_list ')'
   22     | expr . '.' OBJECTID '(' expr_list ')'
   28     | CASE expr . OF case_body_list ESAC
   31     | expr . '+' expr
   32     | expr . '-' expr
   33     | expr . '*' expr
   34     | expr . '/' expr
   36     | expr . '<' expr
   37     | expr . LE expr
   38     | expr . '=' expr

    OF   shift, and go to state 88
    LE   shift, and go to state 73
    '<'  shift, and go to state 74
    '='  shift, and go to state 75
    '+'  shift, and go to state 76
    '-'  shift, and go to state 77
    '*'  shift, and go to state 78
    '/'  shift, and go to state 79
    '@'  shift, and go to state 80
    '.'  shift, and go to state 81


State 63

   29 expr: NEW TYPEID .

    $default  reduce using rule 29 (expr)


State 64

   21 expr: expr . '@' TYPEID '.' OBJECTID '(' expr_list ')'
   22     | expr . '.' OBJECTID '(' expr_list ')'
   30     | ISVOID expr .
   31     | expr . '+' expr
   32     | expr . '-' expr
   33     | expr . '*' expr
   34     | expr . '/' expr
   36     | expr . '<' expr
   37     | expr . LE expr
   38     | expr . '=' expr

    '@'  shift, and go to state 80
    '.'  shift, and go to state 81

    $default  reduce using rule 30 (expr)


State 65

   20 expr: OBJECTID ASSIGN . expr

    IF          shift, and go to state 38
    LET         shift, and go to state 39
    WHILE       shift, and go to state 40
    CASE        shift, and go to state 41
    NEW         shift, and go to state 42
    ISVOID      shift, and go to state 43
    STR_CONST   shift, and go to state 44
    INT_CONST   shift, and go to state 45
    BOOL_CONST  shift, and go to state 46
    OBJECTID    shift, and go to state 47
    NOT         shift, and go to state 48
    '~'         shift, and go to state 49
    '{'         shift, and go to state 50
    '('         shift, and go to state 51

    expr      go to state 89
    let_expr  go to state 53


State 66

   23 expr: OBJECTID '(' . expr_list ')'
